# fertilizer.rust

./: Cargo.toml
.cargo/: config
conf/: duenger.json
src/: fake_signals.rs  gpio_signals.rs  main.rs  ring_buffer.rs  signal_processor.rs  web_handler.rs  web_routes.rs
static/: index.html
static/scripts/: fertilizer.js  navigation.js
static/views/: counter.html  current.html  navigation.html  reset.html  settings.html
