[package]
name = "fertilizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"

[dependencies]
bytes = { version = "1"}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
#tokio = { version = "1", default-features = false }
hyper = { version = "0", default-features = false }
warp = { version = "0.3", default-features = false }

[target.'cfg(unix)'.dependencies]
rppal = "0.13.1"